Fix extra spacing on h2s within <section>

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -76,10 +76,6 @@ body {
     body section h2 a {
       font-size: 12px;
       font-weight: 400; }
-  body section div h2 {
-    margin-top: 30px; }
-    body section div h2:first-of-type {
-      margin-top: 0; }
   body section table a {
     color: #555; }
   body fieldset.info p {
