--- a/assets/sass/layout/typography.scss
+++ b/assets/sass/layout/typography.scss
@@ -49,10 +49,6 @@ body {
         font-weight: 400;
       }
     }
-    div h2 {
-      margin-top: 30px;
-      &:first-of-type { margin-top: 0 }
-    }
     table a {
       color: #555;  
     }
